[gd_scene load_steps=23 format=3 uid="uid://dr75bqddrjto7"]

[ext_resource type="Script" uid="uid://bvodsx6fmyvm7" path="res://screens/game/pop_ups/paused_game_popup/paused_game_popup.gd" id="1_omj55"]
[ext_resource type="Material" uid="uid://bko5g3sqiwqsh" path="res://global_assets/shaders/perspective_shader_material.tres" id="1_wioex"]
[ext_resource type="Texture2D" uid="uid://jd0ff83xmfq7" path="res://screens/game/pop_ups/paused_game_popup/assets/pause_popup_bg.png" id="2_8fk6d"]
[ext_resource type="Texture2D" uid="uid://ofrfb0d01nc5" path="res://screens/game/pop_ups/paused_game_popup/popup_light.png" id="2_kctm6"]
[ext_resource type="Texture2D" uid="uid://dnnnyc6lgax4r" path="res://screens/game/pop_ups/paused_game_popup/assets/slider_background.PNG" id="3_gbjcu"]
[ext_resource type="Texture2D" uid="uid://o8lh4ibwga0l" path="res://screens/game/pop_ups/paused_game_popup/assets/resume_button.png" id="3_xk0mj"]
[ext_resource type="PackedScene" uid="uid://bnw6e40cvuxp1" path="res://screens/game/pop_ups/paused_game_popup/volume_horizontal_slider/volume_horizontal_slider.tscn" id="4_s32kb"]
[ext_resource type="Texture2D" uid="uid://cjjdben0b1u1j" path="res://screens/game/pop_ups/paused_game_popup/assets/resume_button_selected.png" id="4_w5hwk"]
[ext_resource type="Texture2D" uid="uid://cluee0i7vbmap" path="res://screens/game/pop_ups/paused_game_popup/assets/retry_button.png" id="5_opa6a"]
[ext_resource type="Texture2D" uid="uid://d1ntuxd6nqqmq" path="res://screens/game/pop_ups/paused_game_popup/assets/retry_button_selected.png" id="6_3etcl"]
[ext_resource type="Texture2D" uid="uid://imlptc6ith4b" path="res://screens/game/pop_ups/paused_game_popup/assets/main_menu_button.png" id="7_0u3vh"]
[ext_resource type="Texture2D" uid="uid://buh7v6gv6475" path="res://screens/game/pop_ups/paused_game_popup/assets/main_menu_button_selected.png" id="8_4ooyn"]

[sub_resource type="Animation" id="Animation_74jmg"]
resource_name = "continue_pressed"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q2b8e"]
_data = {
&"continue_pressed": SubResource("Animation_74jmg")
}

[sub_resource type="Animation" id="Animation_si1rh"]
resource_name = "retry_pressed"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rdv2s"]
_data = {
&"retry_pressed": SubResource("Animation_si1rh")
}

[sub_resource type="Animation" id="Animation_3ukgr"]
resource_name = "menu_pressed"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l385b"]
_data = {
&"menu_pressed": SubResource("Animation_3ukgr")
}

[sub_resource type="Animation" id="Animation_hr6jj"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackgroundTexture:material:shader_parameter/x_rot")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BackgroundTexture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(18, -112)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackgroundTexture:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BackgroundTexture:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0260824]
}

[sub_resource type="Animation" id="Animation_5ja7b"]
resource_name = "appear"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(3, 2, 2, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackgroundTexture:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.7, 0.7), Vector2(1.15, 1.15), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BackgroundTexture/PopupLight:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.55),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.956863, 0.796078, 0, 0), Color(0.924759, 0.418115, 0.430865, 0.619608), Color(1, 0.898039, 0.682353, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackgroundTexture/PopupLight:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BackgroundTexture:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.15, 0.2, 0.3, 0.4, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0523599, -0.0349066, 0.0174533, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BackgroundTexture:material:shader_parameter/x_rot")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.35, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-40.0, 8.00001, -4.99999, 2.84822, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BackgroundTexture:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(18, -112)]
}

[sub_resource type="Animation" id="Animation_u6018"]
resource_name = "dissapear"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackgroundTexture:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(0.5, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BackgroundTexture:material:shader_parameter/x_rot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 8.00001, -60.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackgroundTexture:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.05, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(18, -112), Vector2(18, -301)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8t7vp"]
_data = {
&"RESET": SubResource("Animation_hr6jj"),
&"appear": SubResource("Animation_5ja7b"),
&"dissapear": SubResource("Animation_u6018")
}

[node name="PausedGamePopup" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 370.0
offset_top = 109.0
offset_right = -406.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_omj55")

[node name="BackgroundFilterBtn" type="Button" parent="."]
layout_mode = 0
offset_left = -374.0
offset_top = -111.0
offset_right = 1546.0
offset_bottom = 969.0

[node name="BackgroundTexture" type="TextureRect" parent="."]
material = ExtResource("1_wioex")
layout_mode = 0
offset_left = 18.0
offset_top = -112.0
offset_right = 1161.0
offset_bottom = 825.0
rotation = -0.0260824
pivot_offset = Vector2(563, 440)
texture = ExtResource("2_8fk6d")

[node name="MusicSliderBackground" type="TextureRect" parent="BackgroundTexture"]
layout_mode = 0
offset_left = 322.0
offset_top = 425.8
offset_right = 904.0
offset_bottom = 492.8
pivot_offset = Vector2(123, 59)
texture = ExtResource("3_gbjcu")

[node name="MusicHorizontalSlider" parent="BackgroundTexture/MusicSliderBackground" instance=ExtResource("4_s32kb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(490, 26)
layout_mode = 0
offset_left = 46.0
offset_top = -7.0
offset_right = 529.0
offset_bottom = 79.0
max_value = 100.0

[node name="SFXSliderBackground" type="TextureRect" parent="BackgroundTexture"]
layout_mode = 0
offset_left = 322.0
offset_top = 512.8
offset_right = 904.0
offset_bottom = 579.8
pivot_offset = Vector2(126, 4)
texture = ExtResource("3_gbjcu")

[node name="SFXHorizontalSlider" parent="BackgroundTexture/SFXSliderBackground" instance=ExtResource("4_s32kb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(490, 26)
layout_mode = 0
offset_left = 46.0
offset_top = -7.0
offset_right = 536.0
offset_bottom = 79.0
max_value = 100.0

[node name="ResumeGameButton" type="TextureButton" parent="BackgroundTexture"]
layout_mode = 0
offset_left = 188.0
offset_top = 633.8
offset_right = 424.0
offset_bottom = 847.8
pivot_offset = Vector2(119, 88)
action_mode = 0
texture_normal = ExtResource("3_xk0mj")
texture_pressed = ExtResource("4_w5hwk")
texture_hover = ExtResource("4_w5hwk")
texture_focused = ExtResource("4_w5hwk")

[node name="ResumePlayer" type="AnimationPlayer" parent="BackgroundTexture/ResumeGameButton"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_q2b8e")
}

[node name="RetryLevelButton" type="TextureButton" parent="BackgroundTexture"]
layout_mode = 0
offset_left = 446.0
offset_top = 633.8
offset_right = 682.0
offset_bottom = 847.8
pivot_offset = Vector2(118, 91)
action_mode = 0
texture_normal = ExtResource("5_opa6a")
texture_pressed = ExtResource("6_3etcl")
texture_hover = ExtResource("6_3etcl")
texture_focused = ExtResource("6_3etcl")

[node name="RetryPlayer" type="AnimationPlayer" parent="BackgroundTexture/RetryLevelButton"]
libraries = {
&"": SubResource("AnimationLibrary_rdv2s")
}

[node name="GoToMainMenuButton" type="TextureButton" parent="BackgroundTexture"]
layout_mode = 0
offset_left = 696.0
offset_top = 633.8
offset_right = 932.0
offset_bottom = 847.8
pivot_offset = Vector2(118, 94)
action_mode = 0
texture_normal = ExtResource("7_0u3vh")
texture_pressed = ExtResource("8_4ooyn")
texture_hover = ExtResource("8_4ooyn")
texture_focused = ExtResource("8_4ooyn")

[node name="MenuPlayer" type="AnimationPlayer" parent="BackgroundTexture/GoToMainMenuButton"]
libraries = {
&"": SubResource("AnimationLibrary_l385b")
}

[node name="PopupLight" type="Sprite2D" parent="BackgroundTexture"]
modulate = Color(1, 0.898039, 0.682353, 0)
position = Vector2(561, 551.8)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_kctm6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_8t7vp")
}

[connection signal="pressed" from="BackgroundTexture/ResumeGameButton" to="." method="_on_resume_game_button_pressed"]
